Closed Bug 663190 Opened 15 years ago Closed 15 years ago

Calling strokeRect with zero width or height should do nothing

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla7

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

Attachment #538320 - Attachment description: Pat → Patch v1
Attachment #538320 - Attachment is patch: true
Attachment #538320 - Attachment mime type: message/rfc822 → text/plain
Attachment #538320 - Flags: review?(Olli.Pettay)
Keywords: dev-doc-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla7
Mozilla/5.0 (Windows NT 5.1; rv:7.0) Gecko/20100101 Firefox/7.0 Can anyone please tell me what is expected to be seen in the test case from the Description? Loading the test example gives me a green background and a "Pass" result bellow the second image. Is this the expected behavior?
Correct.
Mozilla/5.0 (Windows NT 5.1; rv:7.0) Gecko/20100101 Firefox/7.0 Verified on Win XP, Win 7, Ubuntu 11.04 and Mac OS X 10.6 - loading the test example from the Description gives me a green background and a "Passed" result. Setting resolution to VERIFIED FIXED. Thanks Ms2ger!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: