Bug 663190 - Calling strokeRect with zero width or height should do nothing; r=smaug